== trunk
* Move network dependent tests to integration-test [msp]
* Create a parser and a model for upload errors [msp]
* Stub driven tests for VideoFeedParser, VideosFeedParser, UploadErrorParser [msp]
* Added :page and :per_page options, this allows easier usage of the will_paginate
  plugin with the library. The :offset and :max_results options are no longer available. [Daniel Insley]
* Added ability to get video responses on the instances of the YouTube::Model::Video object. [Daniel Insley]
* Added and improved the existing documentation [Daniel Insley]
* Fixed usage of deprecated yt:racy, now using media:rating [Daniel Insley]
* Renamed can_embed? method to embeddable? [Daniel Insley]
* Added ability for padingation and ordering on standard feeds. [Daniel Insley]
* Move network dependent tests to integration-test [msp]
* Create a parser and a model for upload errors  [msp]
* Stub driven tests for VideoFeedParser, VideosFeedParser, UploadErrorParser [msp]
* Add error-handling for video upload errors. [FiXato]
* Add error-handling for authentication errors from YouTube during video upload. [FiXato]
* Add support for making videos private upon video upload. [FiXato]
* Fix issue with REXML parsing of video upload response. [FiXato]
* Fix issue with response code comparison. [FiXato]
* Authcode is now retrieved for video uploads. [FiXato]
* Add basic support for uploading videos [thanks Joe Damato]
* Add basic support for related videos [tmm1]
* Improve docs for order_by attribute [thanks Jason Arora]
* Added support for the "racy" parameter (choices are "include" or "exclude") [thanks Jason Arora]
* Add missing attribute reader for description [tmm1]
* Fix issue with missing yt:statistics and viewCount [tmm1]
* Allow Client#video_by to take either a url or a video id [tmm1]

== 0.4.1 / 2008-02-11

* Added 3GPP video format [shane]
* Fixed tests [shane]

== 0.4.0 / 2007-12-18

* Fixed API projection in search URL [Pete Higgins]